force-app/main/default/objects/Opportunity/fields/Do_Not_Email__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This is a manually checked field; checking the &quot;Email Opt Out&quot; on the contact will not automatically check this one.</inlineHelpText>
    <label>Do Not Email</label>
    <type>Checkbox</type>
</CustomField>