force-app/main/default/objects/Opportunity/fields/Eligible_for_Simple_Tier__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_Simple_Tier__c</fullName>
    <description>Temp field for simple tier eligibility A/B test launching 6/1</description>
    <formula>AND(
  ISPICKVAL(Account.A_B_Test_Name__c, &apos;Simple Tier 9-&apos;),
  ISPICKVAL(Account.A_B_Test_Group__c, &apos;Test&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If checked, is eligible. If not check, is not eligible.</inlineHelpText>
    <label>Eligible for Simple Tier</label>
    <type>Checkbox</type>
</CustomField>