force-app/main/default/objects/Opportunity/fields/ER_Confirm_TimeStamp__c.field-meta.xml
<CustomField>
    <fullName>ER_Confirm_TimeStamp__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ER Confirm TimeStamp</label>
    <type>DateTime</type>
</CustomField>