force-app/main/default/objects/Opportunity/fields/ERC__c.field-meta.xml
<CustomField>
    <fullName>ERC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ERC</label>
    <type>Checkbox</type>
</CustomField>