force-app/main/default/objects/Opportunity/fields/Escalation_Details__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Details__c</fullName>
    <inlineHelpText>Please note any details as to why this is being escalated (including customer questions related to FSA, Life &amp; Disability, HSA, etc.)</inlineHelpText>
    <label>Escalation Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>