force-app/main/default/objects/Opportunity/fields/Escalation_Reason_Detail__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Reason_Detail__c</fullName>
    <label>Escalation Reason Detail</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Late BOR</fullName>
            </value>
            <value>
                <fullName>BOR Away</fullName>
            </value>
            <value>
                <fullName>Nonpay Term</fullName>
            </value>
            <value>
                <fullName>Ineligibility Term</fullName>
            </value>
            <value>
                <fullName>Voluntary Term</fullName>
            </value>
            <value>
                <fullName>Discrepant ED</fullName>
            </value>
            <value>
                <fullName>LG Force Migration</fullName>
            </value>
            <value>
                <fullName>LG Optional Migration</fullName>
            </value>
            <value>
                <fullName>0 Enrolled EEs</fullName>
            </value>
            <value>
                <fullName>0 Active EEs</fullName>
            </value>
            <value>
                <fullName>Ineligible UW</fullName>
            </value>
            <value>
                <fullName>Ineligible Gusto Support</fullName>
            </value>
            <value>
                <fullName>Gusto Error</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>