force-app/main/default/objects/Opportunity/fields/Exclude_from_List__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_List__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox primarily for Danielle&apos;s team to exclude opps from list views.</description>
    <label>Do Not Call</label>
    <type>Checkbox</type>
</CustomField>