force-app/main/default/objects/Opportunity/fields/External_Accountant_Email__c.field-meta.xml
<CustomField>
    <fullName>External_Accountant_Email__c</fullName>
    <label>External Accountant Email</label>
    <type>Email</type>
</CustomField>