force-app/main/default/objects/Opportunity/fields/Fast_ACH__c.field-meta.xml
<CustomField>
    <fullName>Fast_ACH__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Two-day expedited ACH transfer.</description>
    <label>Two-Day ACH</label>
    <type>Checkbox</type>
</CustomField>