force-app/main/default/objects/Opportunity/fields/Feature_Request__c.field-meta.xml
<CustomField>
    <fullName>Feature_Request__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Feature Request</label>
    <type>TextArea</type>
</CustomField>