force-app/main/default/objects/Opportunity/fields/Federal_Credit_Status__c.field-meta.xml
<CustomField>
    <fullName>Federal_Credit_Status__c</fullName>
    <label>Federal Credit Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Finalized</fullName>
            </value>
            <value>
                <fullName>Claimed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>