force-app/main/default/objects/Opportunity/fields/Federal_Tax_Setup_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Federal_Tax_Setup_Completed_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Federal Tax Setup Completed Date</label>
    <type>DateTime</type>
</CustomField>