force-app/main/default/objects/Opportunity/fields/federal_tax_setup_started_at__c.field-meta.xml
<CustomField>
    <fullName>federal_tax_setup_started_at__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>federal tax setup started at</label>
    <type>DateTime</type>
</CustomField>