force-app/main/default/objects/Opportunity/fields/Funding_Type__c.field-meta.xml
<CustomField>
    <fullName>Funding_Type__c</fullName>
    <description>Used to identify the funding type of the group for benefits</description>
    <label>Funding Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Level funded</fullName>
            </value>
            <value>
                <fullName>Self funded</fullName>
            </value>
            <value>
                <fullName>Fully Insured</fullName>
            </value>
            <value>
                <fullName>PEO</fullName>
            </value>
            <value>
                <fullName>Trust/association</fullName>
            </value>
            <value>
                <fullName>Chamber of Commerce</fullName>
            </value>
            <value>
                <fullName>General Agent/TPA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>