force-app/main/default/objects/Opportunity/fields/GDrive_Link__c.field-meta.xml
<CustomField>
    <fullName>GDrive_Link__c</fullName>
    <description>Google Drive Link - GEP Opportunity Info</description>
    <label>GDrive Link</label>
    <type>Url</type>
</CustomField>