force-app/main/default/objects/Opportunity/fields/Handoff_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Handoff_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if the handoff email was sent</description>
    <label>Handoff Email Sent</label>
    <type>Checkbox</type>
</CustomField>