force-app/main/default/objects/Opportunity/fields/Has_Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>Has_Bank_Account__c</fullName>
    <description>Populated with pre-onboarding survey data</description>
    <inlineHelpText>Populated with pre-onboarding survey data</inlineHelpText>
    <label>Has Bank Account</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Have Not Asked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>