force-app/main/default/objects/Opportunity/fields/Has_Call_Today__c.field-meta.xml
<CustomField>
    <fullName>Has_Call_Today__c</fullName>
    <description>If Last Call = TODAY, this box is checked</description>
    <formula>Last_Call__c = TODAY()</formula>
    <inlineHelpText>If Last Call = TODAY, this box is checked</inlineHelpText>
    <label>Has Call Today</label>
    <type>Checkbox</type>
</CustomField>