force-app/main/default/objects/Opportunity/fields/HI_BOR_App_Status__c.field-meta.xml
<CustomField>
    <fullName>HI_BOR_App_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>HI BOR App Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>