force-app/main/default/objects/Opportunity/fields/HI_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>HI_Effective_Date__c</fullName>
    <description>The requested coverage effective date.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Coverage Effective Date</label>
    <type>Date</type>
</CustomField>