force-app/main/default/objects/Opportunity/fields/HI_Lead_Pass_Role__c.field-meta.xml
<CustomField>
    <fullName>HI_Lead_Pass_Role__c</fullName>
    <description>Stamps the role of the user in HI Lead Pass field</description>
    <encryptionScheme>None</encryptionScheme>
    <label>HI Lead Pass Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>