force-app/main/default/objects/Opportunity/fields/HI_License_Expired__c.field-meta.xml
<CustomField>
    <fullName>HI_License_Expired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the Opportunity Owner for a BoR or New Plan opportunity is not licensed for the Filing or HI Opportunity Assignment State.</description>
    <label>HI License Expired</label>
    <type>Checkbox</type>
</CustomField>