force-app/main/default/objects/Opportunity/fields/HI_New_Plan_App_Status__c.field-meta.xml
<CustomField>
    <fullName>HI_New_Plan_App_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>HI New Plan App Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>