force-app/main/default/objects/Opportunity/fields/Historical_Liabilities_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Historical_Liabilities_Completed_Date__c</fullName>
    <label>Historical Liabilities Completed Date</label>
    <type>DateTime</type>
</CustomField>