force-app/main/default/objects/Opportunity/fields/Hold_Out_Record__c.field-meta.xml
<CustomField>
    <fullName>Hold_Out_Record__c</fullName>
    <description>Field indicates record was held from being served up through NBA for experimentation and reporting.</description>
    <inlineHelpText>Field indicates record was held from being served up through NBA for experimentation and reporting.</inlineHelpText>
    <label>Hold Out Record</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hold Out - Greeter - SBOB</fullName>
            </value>
            <value>
                <fullName>Hold Out - After Hours - SBOB</fullName>
            </value>
            <value>
                <fullName>Hold Out - Catch All - SBOB</fullName>
            </value>
            <value>
                <fullName>Hold Out - Catch All 2 - SBOB</fullName>
            </value>
            <value>
                <fullName>Hold Out - Missed APD - SBOB</fullName>
            </value>
            <value>
                <fullName>Hold Out - Upcoming APD - SBOB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>