force-app/main/default/objects/Opportunity/fields/HSA_Renewal__c.field-meta.xml
<CustomField>
    <fullName>HSA_Renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HSA Renewal</label>
    <type>Checkbox</type>
</CustomField>