force-app/main/default/objects/Opportunity/fields/ID__c.field-meta.xml
<CustomField>
    <fullName>ID__c</fullName>
    <description>ZenPayroll or Hawaiian Ice External Id
Prefixed with model name for uniqueness.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>