force-app/main/default/objects/Opportunity/fields/Id_And_Source_Id__c.field-meta.xml
<CustomField>
    <fullName>Id_And_Source_Id__c</fullName>
    <description>Used by Benefit Transfer team</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Id And Source Id</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>