force-app/main/default/objects/Opportunity/fields/Initial_BoR_Forms_Signed_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Initial_BoR_Forms_Signed_DateTime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Initial BoR Forms Signed DateTime</label>
    <type>DateTime</type>
</CustomField>