force-app/main/default/objects/Opportunity/fields/Joined_Date_Panda__c.field-meta.xml
<CustomField>
    <fullName>Joined_Date_Panda__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Join Date calculated from first action eligible for invoicing (i.e. first funded payroll or contractor payment). Free months are *not* excluded from this field.</inlineHelpText>
    <label>Joined Date</label>
    <type>Date</type>
</CustomField>