force-app/main/default/objects/Opportunity/fields/Keep_Opportunity_Open_On_Dismissal__c.field-meta.xml
<CustomField>
    <fullName>Keep_Opportunity_Open_On_Dismissal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies if NP opportunity should be kept open on dismissal status.
Mapped from HI New Plans Application.</description>
    <label>Keep Opportunity Open On Dismissal</label>
    <type>Checkbox</type>
</CustomField>