force-app/main/default/objects/Opportunity/fields/Last_Call__c.field-meta.xml
<CustomField>
    <fullName>Last_Call__c</fullName>
    <description>The last call (be it voicemail, attempt, or connect) that was made on this opportunity. Should match the most recent call Activity.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The last call (be it voicemail, attempt, or connect) that was made on this opportunity.</inlineHelpText>
    <label>Last Call</label>
    <type>Date</type>
</CustomField>