force-app/main/default/objects/Opportunity/fields/Last_Call_Connect__c.field-meta.xml
<CustomField>
    <fullName>Last_Call_Connect__c</fullName>
    <description>The last time a sales rep connected with the customer on this opportunity. Should match the most recent Activity marked as &apos;Connect&apos;.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Last time we chatted with this customer</inlineHelpText>
    <label>Last Call Connect</label>
    <type>Date</type>
</CustomField>