force-app/main/default/objects/Opportunity/fields/Lead_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Lead_Campaign__c</fullName>
    <description>Lead attribution dimension passed from the converted Lead</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Lead attribution dimension passed from the converted Lead</inlineHelpText>
    <label>Lead Campaign</label>
    <type>TextArea</type>
</CustomField>