force-app/main/default/objects/Opportunity/fields/Lead_Created_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Lead_Created_Date_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Lead Created Date Time</label>
    <type>DateTime</type>
</CustomField>