force-app/main/default/objects/Opportunity/fields/Link_Company__c.field-meta.xml
<CustomField>
    <fullName>Link_Company__c</fullName>
    <formula>HYPERLINK(&apos;https://app.gusto.com/panda/companies/&apos;&amp;Account.ZP_Company_ID__c, &apos;Company&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link: Company</label>
    <type>Text</type>
</CustomField>