force-app/main/default/objects/Opportunity/fields/Live_HI_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Live_HI_Transfer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Live HI Transfer</label>
    <type>Checkbox</type>
</CustomField>