force-app/main/default/objects/Opportunity/fields/MDR_Notes__c.field-meta.xml
<CustomField>
    <fullName>MDR_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MDR Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>