force-app/main/default/objects/Opportunity/fields/MSA_Notice_Date__c.field-meta.xml
<CustomField>
    <fullName>MSA_Notice_Date__c</fullName>
    <description>GEP Field to track the MSA notice date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>MSA Notice Date</label>
    <type>Date</type>
</CustomField>