force-app/main/default/objects/Opportunity/fields/Next_Step_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Step_Date__c</fullName>
    <description>Date to follow-up with lead/opportunity. Mapped over from the Next Step Date on the lead when a lead is converted.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Next Step Date</label>
    <type>Date</type>
</CustomField>