force-app/main/default/objects/Opportunity/fields/OB_PRE_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>OB_PRE_Timestamp__c</fullName>
    <label>OB PRE Timestamp</label>
    <type>DateTime</type>
</CustomField>