force-app/main/default/objects/Opportunity/fields/Onboarding_Funnel_Id__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Funnel_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Onboarding Funnel Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>