force-app/main/default/objects/Opportunity/fields/Onboarding_Survey_Interested_Benefit_Opt__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Survey_Interested_Benefit_Opt__c</fullName>
    <description>This field is used to capture answered BDO HI Questions</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Onboarding Survey Interested Benefit Opt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>