force-app/main/default/objects/Opportunity/fields/Opp_Payment_Plan__c.field-meta.xml
<CustomField>
    <fullName>Opp_Payment_Plan__c</fullName>
    <formula>Pricebook2.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp Payment Plan</label>
    <type>Text</type>
</CustomField>