force-app/main/default/objects/Opportunity/fields/Opportunity_Record_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Record_Identifier__c</fullName>
    <description>Used to calculate averages in reports</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Record Identifier</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>