force-app/main/default/objects/Opportunity/fields/Opportunity_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_to_Customer__c</fullName>
    <formula>Company_First_Payroll_Check_Date__c - DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity to Customer (Days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>