force-app/main/default/objects/Opportunity/fields/Order_Generated__c.field-meta.xml
<CustomField>
    <fullName>Order_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Condition that if true then an order has already been generated for this Opportunity.</description>
    <label>Order Generated</label>
    <type>Checkbox</type>
</CustomField>