force-app/main/default/objects/Opportunity/fields/Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Order_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Order Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>