force-app/main/default/objects/Opportunity/fields/Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>Owner_Role__c</fullName>
    <description>Opportunity Owner Role</description>
    <inlineHelpText>At the time the opportunity was open. Locks when closed won.</inlineHelpText>
    <label>Closed Owner Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>admin</fullName>
            </value>
            <value>
                <fullName>exec</fullName>
            </value>
            <value>
                <fullName>ops_ben_xx_xx</fullName>
            </value>
            <value>
                <fullName>sales_mm_fs_xx</fullName>
            </value>
            <value>
                <fullName>sales_mm_fs_xx_mgr</fullName>
            </value>
            <value>
                <fullName>sales_mm_np_xx</fullName>
            </value>
            <value>
                <fullName>sales_mm_np_xx_mgr</fullName>
            </value>
            <value>
                <fullName>sales_mm_pr_xx</fullName>
            </value>
            <value>
                <fullName>sales_partner_ae_xx</fullName>
            </value>
            <value>
                <fullName>sales_partner_am_xx</fullName>
            </value>
            <value>
                <fullName>sales_sb_ib_xx</fullName>
            </value>
            <value>
                <fullName>sales_sb_ob_xx</fullName>
            </value>
            <value>
                <fullName>ops_mig_xx_xx</fullName>
            </value>
            <value>
                <fullName>sales_sb_xx_xx_mgr</fullName>
            </value>
            <value>
                <fullName>sales_partner_xx_xx_mgr</fullName>
            </value>
            <value>
                <fullName>sales_mm_b4_xx</fullName>
            </value>
            <value>
                <fullName>sales_mm_b4_xx_mgr</fullName>
            </value>
            <value>
                <fullName>sales_bd_pr_xx</fullName>
            </value>
            <value>
                <fullName>sales_mm_den_pr_mgr</fullName>
            </value>
            <value>
                <fullName>sales_mm_xx_xx_mgr</fullName>
            </value>
            <value>
                <fullName>sales_sb_np_xx</fullName>
            </value>
            <value>
                <fullName>sales_sb_np_xx_mgr</fullName>
            </value>
            <value>
                <fullName>sales_mm_br_xx</fullName>
            </value>
            <value>
                <fullName>sales_mm_br_xx_mgr</fullName>
            </value>
            <value>
                <fullName>sales_sb_br_xx</fullName>
            </value>
            <value>
                <fullName>sales_sb_br_xx_mgr</fullName>
            </value>
            <value>
                <fullName>sales_sb_fs_xx</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>