force-app/main/default/objects/Opportunity/fields/Owner_Role_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Role_Name__c</fullName>
    <label>Owner Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advisor</fullName>
            </value>
            <value>
                <fullName>Renewal Specialist</fullName>
            </value>
            <value>
                <fullName>Benefits Designer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>