force-app/main/default/objects/Opportunity/fields/Owner_Title__c.field-meta.xml
<CustomField>
    <fullName>Owner_Title__c</fullName>
    <inlineHelpText>At the time the opportunity was open. Locks when CW.</inlineHelpText>
    <label>Closed Owner Title</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account Executive</fullName>
            </value>
            <value>
                <fullName>Account Manager</fullName>
            </value>
            <value>
                <fullName>Administrator</fullName>
            </value>
            <value>
                <fullName>Full Stack Advisor</fullName>
            </value>
            <value>
                <fullName>Inbound Rep</fullName>
            </value>
            <value>
                <fullName>New Plan Advisor</fullName>
            </value>
            <value>
                <fullName>New Plan Advisor Manager</fullName>
            </value>
            <value>
                <fullName>Outbound Rep</fullName>
            </value>
            <value>
                <fullName>Payroll Rep</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>