force-app/main/default/objects/Opportunity/fields/Partner_Tier__c.field-meta.xml
<CustomField>
    <fullName>Partner_Tier__c</fullName>
    <description>Partner Tier from account</description>
    <formula>TEXT( Account.Sold_By__r.AM_Tier__c )</formula>
    <inlineHelpText>Partner Tier from account</inlineHelpText>
    <label>Partner Tier</label>
    <type>Text</type>
</CustomField>