force-app/main/default/objects/Opportunity/fields/Payroll_Schedule_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Schedule_Completed_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Payroll Schedule Completed Date</label>
    <type>DateTime</type>
</CustomField>