force-app/main/default/objects/Opportunity/fields/PEO__c.field-meta.xml
<CustomField>
    <fullName>PEO__c</fullName>
    <description>Holds the PEO Switcher value on the corresponding most recent related TTF</description>
    <label>PEO Switcher</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>