force-app/main/default/objects/Opportunity/fields/Playmode_Date__c.field-meta.xml
<CustomField>
    <fullName>Playmode_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Playmode Date</label>
    <type>Date</type>
</CustomField>