force-app/main/default/objects/Opportunity/fields/prediction__c.field-meta.xml
<CustomField>
    <fullName>prediction__c</fullName>
    <label>prediction</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>