force-app/main/default/objects/Opportunity/fields/Previous_Payroll_Provider__c.field-meta.xml
<CustomField>
    <fullName>Previous_Payroll_Provider__c</fullName>
    <label>Previous Payroll Provider</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ADP</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Paychex</fullName>
            </value>
            <value>
                <fullName>Intuit or Quickbooks</fullName>
            </value>
            <value>
                <fullName>Square</fullName>
            </value>
            <value>
                <fullName>Paylocity</fullName>
            </value>
            <value>
                <fullName>JustWorks</fullName>
            </value>
            <value>
                <fullName>Trinet</fullName>
            </value>
            <value>
                <fullName>We do it ourselves manually</fullName>
            </value>
            <value>
                <fullName>We use a local provider</fullName>
            </value>
            <value>
                <fullName>An accountant/CPA</fullName>
            </value>
            <value>
                <fullName>I don&apos;t know</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>