force-app/main/default/objects/Opportunity/fields/Previous_Paystubs_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Previous_Paystubs_Completed_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Previous Paystubs Completed Date</label>
    <type>DateTime</type>
</CustomField>