force-app/main/default/objects/Opportunity/fields/previous_paystubs_started_at__c.field-meta.xml
<CustomField>
    <fullName>previous_paystubs_started_at__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>previous paystubs started at</label>
    <type>DateTime</type>
</CustomField>