force-app/main/default/objects/Opportunity/fields/Price_at_Closed_Won__c.field-meta.xml
<CustomField>
    <fullName>Price_at_Closed_Won__c</fullName>
    <label>Price at Closed Won</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>